[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pes-mod"
version = "1.0.0"
description = "PES custom handlers, blueprints, and utilities"
authors = [
    {name = "PES Team"}
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",  # For API calls
    "google-search-results>=2.4.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["pes", "pes.handlers"]

[tool.setuptools.package-data]
pes = ["blueprints/*.json"]




