[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pes-noma-mod"
version = "1.0.0"
description = "PES Noma custom handlers, blueprints, and utilities"
authors = [
    {name = "PES Team"}
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",  # For API calls
    "google-search-results>=2.4.2",
    "pyyaml>=6.0",  # For loading prompts from package YAML files
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../../../noma/package",
]

[tool.setuptools]
packages = ["pes_noma", "pes_noma.handlers"]

[tool.setuptools.package-data]
pes_noma = ["blueprints/*.json"]
